# Tic-Tac-Toe

./: .env.cmake.example  .gitattributes  .gitignore  CMakeLists.txt  README.md
android/: settings.gradle
android/app/: build.gradle
rc/: app.rc
src/: App.c  App.h  main.c  sources.cmake
src/base/: BasicSceneManager.c  BasicSceneManager.h  Box.c  Box.h  Button.c  Button.h  DataZipFile.h  Graphics.c  Graphics.h  Rectangle.c  Rectangle.h  SceneManager.c  SceneManager.h  Texture.c  Texture.h  TextureFilter.h  Window.c  Window.h  rect.h
src/base/opengl_renderer/: GL.h  GLBuffer.c  GLBuffer.h  GLProgram.c  GLProgram.h  GLTexture.c  GLTexture.h  OpenGLRenderer.c  OpenGLRenderer.h
src/base/opengl_renderer/shaders/: shader.frag.h  shader.vert.h
src/base/private/: Timer.c  Timer.h
src/scene_game/: Footer.c  Footer.h  Header.c  Header.h  SceneGame.c  SceneGame.h  SceneGameRect.h  Sidebar.c  Sidebar.h
src/scene_game/board/: GameBoard.c  GameBoard.h  board_util.c  board_util.h
src/scene_game/game_board/: GameBoard.c  GameBoard.h  board.c  board.h
